<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClimbScore</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_climb">Add climb</string>
    <string name="title_activity_add_climb">Add Climb</string>
    <string name="indoors">Indoors</string>
    <string name="outdoors">Outdoors</string>
    <string name="trad">Trad</string>
    <string name="lead">Lead</string>
    <string name="toprope">Top rope</string>
    <string name="bouldering">Bouldering</string>
    <string name="saveclimb">Save Climb</string>
    <string name="title_activity_climb_log">ClimbLogActivity</string>
    <string name="show_climbs">Show past climbs</string>
    <string name="delete">Delete</string>

</resources>
