<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddClimbActivity" >

    <RadioGroup
        android:id="@+id/inoutdoorsradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioIndoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indoors" />

        <RadioButton
            android:id="@+id/radioOutdoors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outdoors" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/typeradio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inoutdoorsradio"
        android:layout_below="@+id/inoutdoorsradio"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioTrad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trad" />

        <RadioButton
            android:id="@+id/radioLead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lead" />

        <RadioButton
            android:id="@+id/radioTopRope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toprope" />

        <RadioButton
            android:id="@+id/radioBouldering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouldering" />
    </RadioGroup>

</RelativeLayout>